--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-   
+       
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>MyBudget</title>
+    <title>DIVVY$</title>
   </head>
   <body>
   
